k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend-container
          image: bkuslapur/frontend-app:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30080
